--- a/palce_provider/pubspec.yaml
+++ b/palce_provider/pubspec.yaml
@@ -47,6 +47,9 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
   image_picker: ^0.8.5+3
+  path_provider: ^2.0.10
+  path: ^1.8.0
+  sqflite: ^2.0.2+1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
