--- a/palce_provider/pubspec.yaml
+++ b/palce_provider/pubspec.yaml
@@ -50,6 +50,9 @@ dev_dependencies:
   path_provider: ^2.0.10
   path: ^1.8.0
   sqflite: ^2.0.2+1
+  location: ^4.4.0
+  google_maps_flutter: ^2.1.5
+  http: ^0.13.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
